Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -453,14 +453,15 @@
        "'bob smith'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a_fine_name = return_full_name()\n",
-    "a_fine_name"
+    "\n",
+    "a_fine_name\n"
    ]
   },
   {
