--- a/index.ipynb
+++ b/index.ipynb
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "\"this is the function's output\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
     "    print(\"this is executed\")\n",
     "    return \"this is the function's output\"\n",
     "    print(\"this is not executed\")\n",
-    "return_statements()"
+    "return_statements()\n"
    ]
   },
   {
